# docker-images

./: .clang-format  .env.dev  .gitignore  .prettierignore  .prettierrc  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  devcontainer_atcoder.json  devcontainer_django.json  devcontainer_nvc.json  devcontainer_python.json  devcontainer_pytorch.json
.github/workflows/: django.yml
atcoder/: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  docker-compose.yml
atcoder/.devcontainer/: devcontainer.json
atcoder/cmd/: abc_dl.sh  arc_dl.sh  other_dl.sh  typical.sh
atcoder/templates/: input.txt
cmd/: abc_dl.sh  arc_dl.sh  docker.sh  docker_exec.sh  other_dl.sh
django/: Dockerfile  entrypoint.sh  requirements.txt
docker/atcoder/: Dockerfile
docker/nvc/: Dockerfile  requirements.txt
docker/python/: Dockerfile
docker/pytorch/: Dockerfile.111  Dockerfile.171  Dockerfile.171.2  requirements.txt
docker/react/: .dockerignore  Dockerfile
docs/: atcoder.md  django.md  docker.md  docker_desktop.md  docker_install.md  docker_nvidia.md  docker_nvidia_practice.md  python.md  pytorch.md
fastapi/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
go/: .air.toml  Dockerfile  README.md  compose.yaml  docker-compose.yaml  go.mod  server.go
node/: .dockerignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml
nvc/: Dockerfile  Dockerfile copy  Makefile  README.md
poetry/: Dockerfile  README.md  docker-compose.yml
python-fastapi/: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
python-fastapi/src/: main.py
python-jupyter/: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
python-jupyter/notebook/: sample.ipynb
python-pip/: .gitignore  .prettierrc  Dockerfile  README.md  compose.yaml  docker-compose.yaml
python-poetry/: .gitignore  Dockerfile  compose.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
python-rye/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml
python_cv/: Dockerfile
pytorch/: Dockerfile.111  Dockerfile.171  Dockerfile.171.2  Makefile  README.md  docker.sh  pyproject.toml  requirements.txt
pytorch-poetry/: Makefile  README.md  docker.sh  pyproject.toml
pytorch-poetry/docker/: Dockerfile.cu111  Dockerfile.cu117  Dockerfile.cu171  Dockerfile.nvc
pytorch-poetry/pyproject.tomls/torch-1.13.0/: pyproject.toml
pytorch-poetry/pyproject.tomls/torch-1.9.0/: pyproject.toml
pytorch-poetry/pyproject.tomls/torch-2.0.0/: pyproject.toml
pytorch-rye/: .dockerignore  README.md  docker.sh  pyproject.toml
pytorch-rye/docker/: Dockerfile.cu111  Dockerfile.cu117
pytorch/docker/: Dockerfile.cu111  Dockerfile.cu117  Dockerfile.cu171  Dockerfile.nvc
pytorch/src/: main.py
react/: Dockerfile
src/atcoder/: atcoder.cpp
src/atcoder/abc/abc001/: contest.acc.json
src/atcoder/abc/abc001/a/: abc001_a.cpp  abc001_a.out
src/atcoder/abc/abc328/: contest.acc.json
src/atcoder/abc/abc328/a/: a.out  abc328_a.cpp
src/atcoder/abc/abc328/b/: a.out  abc328_b.cpp
src/atcoder/abc/abc328/c/: a.out  abc328_c.cpp
src/atcoder/abc/abc328/d/: a.out  abc328_d.cpp
src/atcoder/abc/abc329/: contest.acc.json
src/atcoder/abc/abc329/a/: a.out  abc329_a.cpp
src/atcoder/abc/abc329/b/: a.out  abc329_b.cpp
src/atcoder/abc/abc329/c/: a.out  abc329_c.cpp
src/atcoder/abc/abc329/d/: a.out  abc329_d.cpp
src/atcoder/abc/abc329/e/: a.out  abc329_e.cpp
src/atcoder/abc/abc330/: contest.acc.json
src/atcoder/abc/abc330/a/: a.out  abc330_a.cpp
src/atcoder/abc/abc330/b/: a.out  abc330_b.cpp
src/atcoder/abc/abc330/c/: a.out  abc330_c.cpp
src/atcoder/abc/abc330/d/: a.out  abc330_d.cpp
src/atcoder/arc/arc001/: contest.acc.json
src/atcoder/other/abs/: contest.acc.json
src/atcoder/other/abs/abc081a/: a.out  abs_abc081a.cpp
src/atcoder/other/abs/abc081b/: a.out  abs_abc081b.cpp
src/atcoder/other/abs/abc083b/: a.out  abs_abc083b.cpp
src/atcoder/other/abs/abc085b/: a.out  abs_abc085b.cpp
src/atcoder/other/abs/abc085c/: a.out  abs_abc085c.cpp
src/atcoder/other/abs/abc086a/: a.out  abs_abc086a.cpp
src/atcoder/other/abs/abc087b/: a.out  abs_abc087b.cpp
src/atcoder/other/abs/abc088b/: a.out  abs_abc088b.cpp
src/atcoder/other/abs/practicea/: a.out  abs_practicea.cpp
src/atcoder/other/column/step1/: a.out  bit_linear_search.cpp
src/atcoder/other/tessoku-book/: contest.acc.json
src/atcoder/other/tessoku-book/a01/: a.out  tessoku-book_a01.cpp
src/atcoder/other/tessoku-book/a02/: a.out  tessoku-book_a02.cpp
src/atcoder/other/tessoku-book/a03/: a.out  tessoku-book_a03.cpp
src/atcoder/other/tessoku-book/a04/: a.out  tessoku-book_a04.cpp
src/atcoder/other/tessoku-book/a05/: a.out  tessoku-book_a05.cpp
src/atcoder/other/tessoku-book/a06/: a.out  tessoku-book_a06.cpp
src/atcoder/other/tessoku-book/a07/: a.out  tessoku-book_a07.cpp
src/atcoder/other/tessoku-book/a08/: a.out  tessoku-book_a08.cpp
src/atcoder/other/tessoku-book/a09/: a.out  tessoku-book_a09.cpp
src/atcoder/other/tessoku-book/a10/: a.out  tessoku-book_a10.cpp
src/atcoder/other/tessoku-book/a11/: a.out  tessoku-book_a11.cpp
src/atcoder/other/tessoku-book/b01/: a.out  tessoku-book_b01.cpp
src/atcoder/other/tessoku-book/b02/: a.out  tessoku-book_b02.cpp
src/atcoder/other/tessoku-book/b03/: a.out  tessoku-book_b03.cpp
src/atcoder/other/tessoku-book/b04/: a.out  tessoku-book_b04.cpp
src/atcoder/other/tessoku-book/b06/: a.out  tessoku-book_b06.cpp
src/atcoder/other/tessoku-book/b08/: a.out  tessoku-book_b08.cpp
src/atcoder/other/tessoku-book/b09/: a.out  tessoku-book_b09.cpp
src/atcoder/other/tessoku-book/b11/: a.out  tessoku-book_b11.cpp
src/django/backend/api/: models.py  serializers.py  urls.py  views.py
src/django/backend/backend/: settings.py  urls.py
src/django/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/django/frontend/src/: App.tsx  main.tsx
src/python/: demo.py
templates/: atcoder.cpp
(+1 files in other folders)
