[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.0%2Bcu117-cp38-cp38-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.0"
isort = "^5.13.2"
pytest = "^7.4.3"
mypy = "^1.8.0"
pyproject-flake8 = "5.0.4"

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.flake8]
max-line-length = 119
max-complexity = 18
ignore = "W293, W504, E111, E114, E402, E501,"
exclude = [".venv"]

[tool.autopep8]
max-line-length = 119
indent-size = 4
ignore = "E111, E114, E402, E501,"
in-place = true
recursive = true
aggressive = 3

[tool.mypy]
python_version = "3.8"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["/.venv/"]

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]
addopts = ["--ignore=.venv"]
